--- a/PLM-Reporting.org
+++ b/PLM-Reporting.org
@@ -1,10 +1,25 @@
 * Journal
 ** <2015-04-07>
 *** Done
-**** Visualisation du cours sur AngularJS
+**** Visualisation du cours Code School sur AngularJS
 *** Questions
 *** Planned
 ** <2015-04-08>
 *** Done
+**** Installation des outils de travail
+**** Installation du play framework pour lancer webPLM en local
+**** Etude du fonctionnement et du code de webPLM et PLM
+**** Etude du fonctionnement de l'editeur actuel de PLM
 *** Questions
 *** Planned
+** <2015-04-09>
+*** Done
+**** Fork de PLM et webPLM
+**** Etude plus en détail de la partie exercice de  webPLM et du code de l'editeur actuel de PLM
+**** Lecture des bonnes pratiques AngularJS utilisées pour webPLM (https://github.com/johnpapa/angular-styleguide)
+**** Lecture d'un tutoriel sur l'élément HTML <canvas> utilisé pour dessiner le monde
+**** Création du controleur et de la vue Editor pour débuter le code
+*** Questions
+**** Comment créer un monde vide au chargement de l'éditeur
+*** Planned
+**** Afficher un monde vide au chargement de l'éditeur
