--- a/PLM-Reporting.org
+++ b/PLM-Reporting.org
@@ -13,7 +13,7 @@
 - Corriger l'erreur "editor.world is null" au démarrage de l'éditeur
 - Pouvoir choisir une couleur personnalisée pour un Buggle
 - Afficher et pouvoir éditer la couleur et le texte d'une cellule dans le tableau des propriétés
-- Commencer à refléchir sur l'éditeur de missions
+- Commencer à réfléchir sur l'éditeur de missions
 ** <2015-04-20>
 *** Done
 - Possibilité de modifier la largeur du monde en éditant le tableau des propriétés
